Fix Lineage Mobile Overflow and Quote Text

--- a/src/index.css
+++ b/src/index.css
@@ -86,10 +86,10 @@
     --input: 220 20% 20%;
     --ring: 45 60% 70%;
 
-    --male: 200 50% 60%;
-    --male-light: 200 40% 16%;
-    --female: 152 30% 50%;
-    --female-light: 152 20% 16%;
+    --male: 210 60% 60%;
+    --male-light: 210 30% 18%;
+    --female: 340 45% 60%;
+    --female-light: 340 25% 18%;
 
     --canvas-bg: 220 30% 7%;
 
